# kenan

./: .gitignore  README.md  gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle
app/libs/include/libpng/: Android.mk
app/src/main/: AndroidManifest.xml
app/src/main/assets/: orc2dTest.js  test-graphics.js  test-memory-2.js  test-renderer-image.js  test-renderer.js  test1.js
app/src/main/assets/src/framework/: clz_spirit.js
app/src/main/assets/src/tutorials/: test-render-graphics.js  test-renderer-image.js  test-renderer-main.js  test-renderer-spirit.js  test-renderer.js  test-resource-loader.js
app/src/main/cpp/: Test_v8Engine.cpp  defines.cpp  defines.h  mainjni.cpp  native-lib.cpp
app/src/main/cpp/graphics/: Canvas.cpp  Canvas.h  Image.cpp  Image.h  ImageData.cpp  ImageData.h  PixelArray.h  RenderingContext.h  Style.h
app/src/main/cpp/graphics/canvas/: CanvasGradient.cpp  CanvasGradient.h  CanvasPattern.cpp  CanvasPattern.h  CanvasStyle.cpp  CanvasStyle.h  Color.cpp  Color.h  Font.cpp  Font.h  GraphicsContext.cpp  GraphicsContext.h  scan_path.cpp  scan_path.h
app/src/main/cpp/graphics/webgl/: Types3D.h  WebGLActiveInfo.cpp  WebGLActiveInfo.h  WebGLBuffer.cpp  WebGLBuffer.h  WebGLContextAttributes.cpp  WebGLContextAttributes.h  WebGLFrameBuffer.cpp  WebGLFrameBuffer.h  WebGLGetInfo.cpp  WebGLGetInfo.h  WebGLGraphicsContext.cpp  WebGLGraphicsContext.h  WebGLGraphicsContextV8.cpp  WebGLObject.cpp  WebGLObject.h  WebGLProgram.cpp  WebGLProgram.h  WebGLRenderBuffer.cpp  WebGLRenderBuffer.h  WebGLShader.cpp  WebGLShader.h  WebGLTexture.cpp  WebGLTexture.h  WebGLVertexArrayObjectOES.cpp  WebGLVertexArrayObjectOES.h
app/src/main/cpp/kenan-config/: PlatformConfig.h  ResourceLoader.cpp  ReturnStatus.h  defines.h
app/src/main/cpp/kenan-engine2/: AliTransformationMatrix.cpp  AliTransformationMatrix.h  Android.mk  MathExtras.h  NativeEnv.cpp  NativeEnv.h  TransformMatrix.cpp  TransformMatrix.h  aligl.h  effect.cpp  effect.h  gl2d.h  gl2d_impl.h  gl3d_impl.cpp  gl3d_impl.h  graphics2d.cpp  shaders.cpp  shaders.h  sprite2d.cpp  sprite2d.h  system.cpp
app/src/main/cpp/kenan-graphics/: ByteArray.h  Image.cpp  Image.h  ImageData.cpp  ImageData.h  ImageImpl.cpp  ImageImpl.h  ImageLoader.cpp  ImageLoader.h  PixelArray.cpp  PixelArray.h
app/src/main/cpp/kenan-platform/: PlatformConfig.cpp  PlatformConfig.h  ResourceController.cpp  ResourceController.h  defines.cpp  defines.h
app/src/main/cpp/kenan-platform/loader/: ResourceLoader.cpp  ResourceLoader.h
app/src/main/cpp/kenan-platform/net/: HttpClient.cpp  HttpClient.h
app/src/main/cpp/kenan-runtime/: RuntimeApi.cpp  RuntimeApi.h  RuntimeLoop.cpp  RuntimeLoop.h  RuntimeMessage.cpp  RuntimeMessage.h  RuntimeMessageLoop.cpp  RuntimeMessageLoop.h  RuntimeOptions.cpp  RuntimeOptions.h  RuntimeTask.cpp  RuntimeTask.h
app/src/main/cpp/kenan-runtime/v8bindings/: ObjectWrap.h  V8Base.cpp  V8Base.h  V8EventService.cpp  V8EventService.h  V8Graphics.cpp  V8Graphics.h  V8Image.cpp  V8Image.h  V8Kenan2d.cpp  V8Kenan2d.h  V8Log.cpp  V8Main.cpp  V8Main.h  V8MainEngine.cpp  V8MainEngine.h  V8Orc2d.h  V8ResourceManager.cpp  V8Script.cpp  V8Script.h  V8Spirit.cpp  V8Spirit.h  V8Task.cpp  V8Task.h  V8Thread.cpp  V8Thread.h
app/src/main/cpp/kenan-sal/: SAL.h  SALFileOperation.cpp  SALFileOperation.h  SALImageOperation.cpp  SALImageOperation.h  SALTaskOperation.cpp  SALTaskOperation.h  SALThreadOperation.cpp  SALThreadOperation.h
app/src/main/cpp/kenan-system/: Assert.cpp  Assert.h  Base64.cpp  Base64.h  CallBackFuncs.cpp  CallBackFuncs.h  DCSocket.cpp  DMath.h  EntityManager.cpp  EntityManager.h  EntityPool.cpp  EntityPool.h  JsLoader.cpp  JsLoader.h  Loader.h  Log.cpp  Log.h  ResourceLoader.cpp  ThreadPool.cpp  ThreadPool.h  UUID.cpp  UUID.h  fs.cpp  fs.h
app/src/main/cpp/kenan-system/net/: HttpClient.cpp  HttpClient.h
app/src/main/cpp/kenan-v8bindings/: ObjectWrap.h  V8EventService.cpp  V8EventService.h  V8Global.cpp  V8Global.h  V8Image.cpp  V8Image.h  V8ImageData.cpp  V8ImageData.h  V8Kenan.cpp  V8Kenan.h  V8Log.cpp  V8Log.h  V8Main.cpp  V8Main.h  V8Orc2d.cpp  V8Orc2d.h  V8ResourceManager.cpp  V8ResourceManager.h  V8Sprite.cpp  V8Sprite.h
app/src/main/cpp/loader/: CloudxResourceLoader.h  DCSocket.h  ImageLoader.cpp  JsLoader.cpp  JsLoader.h  ResourceLoader.cpp
app/src/main/cpp/net/: SocketClient.cpp  SocketClient.h  ThreadQueue.h  WebSocketImpl.cpp  WebSocketImpl.h  XMLHttpRequest.cpp  XMLHttpRequest.h
app/src/main/cpp/sql/: Sqlite3Binary.cpp  Sqlite3Binary.h  Sqlite3DB.cpp  Sqlite3DB.h  Sqlite3Query.cpp  Sqlite3Query.h  Sqlite3Statement.cpp  Sqlite3Statement.h  Sqlite3Table.cpp  Sqlite3Table.h
app/src/main/cpp/src/: CallBackFuncs.cpp  CallBackFuncs.h  CloudX.cpp  CloudX.h  DirectCanvas.cpp  DirectCanvas.h  MemoryManager.cpp  MemoryManager.h  ObjectWrap.h  Script.cpp  Script.h
app/src/main/cpp/system-impl/android/: IMPL_AndroidNDK.cpp  IMPL_Android_JNI.cpp  mainjni.cpp
app/src/main/cpp/util/: ArrayType.h  ColorData.h  Container.h  Edge.cpp  Edge.h  FloatRect.cpp  FloatRect.h  FloatSize.h  ImageDataTypeConvert.h  Path.cpp  Path.h  Point.h  StripComments.h  fs.cpp
app/src/main/cpp/util/webgl/: ArrayBuffer.cpp  ArrayBuffer.h  ArrayBufferView.cpp  ArrayBufferView.h  Float32Array.cpp  Float32Array.h  Float64Array.cpp  Float64Array.h  Int16Array.cpp  Int16Array.h  Int32Array.cpp  Int32Array.h  Int8Array.cpp  Int8Array.h  Uint16Array.cpp  Uint16Array.h  Uint32Array.cpp  Uint32Array.h  Uint8Array.cpp  Uint8Array.h
app/src/main/cpp/v8bindings/: ObjectWrap.cpp  V8CloudX.cpp  V8CloudX.h  V8DirectCanvas.cpp  V8DirectCanvas.h  V8EventService.cpp  V8GlobalFunctions.cpp  V8GlobalFunctions.h  V8Image.cpp  V8Main.cpp  V8Orc2d.cpp  V8PixelArray.cpp  V8PixelArray.h  V8ResourceManager.cpp  V8ResourceManager.h  V8Script.cpp  V8Script.h
app/src/main/cpp/v8bindings/graphics/: V8Canvas.cpp  V8Canvas.h  V8GraphicsContext.cpp  V8GraphicsContext.h  V8Image.cpp  V8Image.h  V8ImageData.cpp  V8ImageData.h  V8Orc2d.cpp  V8PixelArray.cpp  V8Sprite.h  V8WebGLGraphicsContext.cpp  (+1 more)
app/src/main/res/layout/: activity_main.xml
(+25 files in other folders)
